<resources>
    <string name="app_name">amaysim</string>
    <string name="form_msn">MSN</string>
    <string name="form_login">Login</string>
    <string name="form_password">Password</string>

    <!-- API -->
    <string name="api_url">https://raw.githubusercontent.com/amaysim-au/engineering-test-resources/master/collection.json</string>
    <string name="loading">Loading ...</string>
    <string name="failed_login">Invalid MSN/Password.</string>
    <string name="account_summary">Account Summary</string>

    <!-- Subscription -->
    <string name="subscription_data_balance">Data Balance:  %1$s</string>
    <string name="subscription_credit_balance">Credit Balance: %1$s</string>
    <string name="subscription_rollover_credit_balance">Rollover Credit Balance: %1$s</string>
    <string name="subscription_rollover_data_balance">Rollover Data Balance:  %1$s</string>
    <string name="subscription_international_talk_balance">International Talk Balance:  %1$s</string>
    <string name="subscription_expiry_date">Expiry Date:  %1$s</string>
    <string name="subscription_auto_renewal">Auto Renewal:  %1$s</string>
    <string name="primary_subscription">Primary Subscription:  %1$s</string>

    <!-- Product -->
    <string name="product_name">Name: %1$s</string>
    <string name="product_data">Data: %1$s</string>
    <string name="product_credit">Credit: %1$s</string>
    <string name="product_international_talk">International Talk: %1$s</string>
    <string name="product_unlimited_text">Unlimited Text: %1$s</string>
    <string name="product_unlimited_talk">Unlimited Talk: %1$s</string>
    <string name="product_unlimited_international_text">Unlimited International Text: %1$s</string>
    <string name="product_unlimited_international_talk">Unlimited International Talk: %1$s</string>
    <string name="product_price">Price: %1$s</string>

    <!--Account Info-->
    <string name="acct_name">Name: %1$s</string>
    <string name="acct_payment_type">Payment Type: %1$s</string>
    <string name="acct_unbilled_charges">Unbilled Charges: %1$s</string>
    <string name="acct_next_billing_date">Next Billing Date: %1$s</string>
    <string name="acct_contact_no">Contact no: %1$s</string>
    <string name="acct_email_address">Email address: %1$s</string>
    <string name="error_no_connection">No Connection. Please check your data connection.</string>
</resources>
